// xcap.proto holds types for serializing xcap via protobuf.
syntax = "proto3";

package loki.xcap;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/grafana/loki/v3/pkg/xcap/internal/proto";

// ProtoCapture is protobuf representation of a Capture.
message ProtoCapture {
  // A list of Regions recorded in the Capture.
  repeated ProtoRegion regions = 1;

  // A list of statistic definitions used in the Capture across all
  // Regions. The index into this list is used as the statistic_id field
  // in Observation.
  repeated ProtoStatistic statistics = 2;
}

// ProtoRegion is protobuf representation of a Region.
message ProtoRegion {
  // Name is the name of the region.
  string name = 1;

  // StartTime is when the region was created.
  google.protobuf.Timestamp start_time = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];

  // EndTime is when the region ended. Zero if not ended.
  google.protobuf.Timestamp end_time = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];

  // Observations are all observations recorded in this region.
  repeated ProtoObservation observations = 4;

  // Id is a unique identifier for this region (8 bytes).
  bytes id = 5;

  // ParentId is the ID of the parent region, or empty if this is a root region (8 bytes).
  bytes parent_id = 6;

  // Attributes are the attributes associated with this region.
  repeated ProtoAttribute attributes = 7;
}

// ProtoAttribute represents a single attribute key-value pair.
message ProtoAttribute {
  // Key is the attribute key.
  string key = 1;

  // Value is the attribute value.
  ProtoAttributeValue value = 2;
}

// ProtoAttributeValue represents an attribute value.
message ProtoAttributeValue {
  oneof kind {
    string string_value = 1;
    int64 int_value = 2;
    double float_value = 3;
    bool bool_value = 4;
  }
}

// ProtoStatistic represents a statistic definition.
message ProtoStatistic {
  // Name is the name of the statistic.
  string name = 1;

  // DataType is the data type of the statistic's values.
  ProtoDataType data_type = 2;

  // AggregationType is how multiple observations are aggregated.
  ProtoAggregationType aggregation_type = 3;
}

// ProtoObservation represents an aggregated observation value for a statistic.
message ProtoObservation {
  // StatisticId is the index into the statistics list in Capture.
  uint32 statistic_id = 1;

  // Value is the aggregated observation value.
  ProtoObservationValue value = 2;

  // Count is the number of observations aggregated.
  uint32 count = 3;
}

// ProtoObservationValue represents a single observation value.
message ProtoObservationValue {
  oneof kind {
    int64 int_value = 1;
    double float_value = 2;
    bool bool_value = 3;
  }
}

// ProtoDataType specifies the data type of a statistic's values.
enum ProtoDataType {
  PROTO_DATA_TYPE_INVALID = 0; // Invalid/unspecified data type.
  PROTO_DATA_TYPE_INT64 = 1; // Signed 64-bit integer statistic.
  PROTO_DATA_TYPE_FLOAT64 = 2; // Double precision floating point statistic.
  PROTO_DATA_TYPE_BOOL = 3; // Boolean statistic (flag).
}

// ProtoAggregationType specifies how to combine multiple observations of the
// same statistic.
enum ProtoAggregationType {
  PROTO_AGGREGATION_TYPE_INVALID = 0; // Invalid/unspecified aggregation type.
  PROTO_AGGREGATION_TYPE_SUM = 1; // Sum all observations together.
  PROTO_AGGREGATION_TYPE_MIN = 2; // Use the smallest value.
  PROTO_AGGREGATION_TYPE_MAX = 3; // Use the largest value.
  PROTO_AGGREGATION_TYPE_LAST = 4; // Use the last recorded value.
  PROTO_AGGREGATION_TYPE_FIRST = 5; // Use the first recorded value.
}
